--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -19,12 +19,12 @@
 
 \Def Множество $\mathcal{X}$, которое задает всевозможные значения $X$, будем называть выборочным пространством.
 
-\Def Пусть $S \subset \mathcal{X}$, $\{X \in S\}$ -- $\mathfrak{S}$-измеримое множество. $S$ будем называть критическим множеством (или же критерием), если верно следующее:
+\Def Пусть $S \subset \mathcal{X}$, $S$ -- $\mathfrak{S}$-измеримое множество. $S$ будем называть критическим множеством (или же критерием), если верно следующее:
 \begin{equation*}
     \text{$H_0$ отвергается $\iff$ $X \in S$}
 \end{equation*}
 
-\Comm Условие $\mathfrak{S}$-измеримости $\{X \in S\}$ нужно, чтобы мы потом могли законно использовать его в мере, иначе нет гарантий, что мы попадем в область определения.
+\Comm Условие $\mathfrak{S}$-измеримости $S$ нужно, чтобы мы потом могли законно использовать его в мере, иначе нет гарантий, что мы попадем в область определения.
 Не знаю на сколько имеет смысл об этом говорить на экзамене, но Савелов это опускал, поэтому чтобы не нарваться на доп вопросы, возможно, лучше не заикаться об этом.
 
 \Def Ошибкой первого рода будем называть отвержение $H_0$, когда она верна.
