--- a/solutions/differential/21.tex
+++ b/solutions/differential/21.tex
@@ -198,7 +198,7 @@
 Аналогично соответствующей теореме в простейшем случае, если собственные значения и Жордановы цепочки делятся на попарно комплексно сопряженные и вещественные, то общее решение можно записать в виде
 
 \begin{equation*}
-    x(t) = \sum_{k=1}^m \left( a_k \Re \left( \psi_k(t) \right) + b_k \Im \left( \psi_k(t) \right) \right) + \sum_{s=2m+1}^n c_s \psi_s(t),
+    x(t) = \sum_{k=1}^m \left( a_k \Re \left( \psi_k(t) \right) + b_k \Ima \left( \psi_k(t) \right) \right) + \sum_{s=2m+1}^n c_s \psi_s(t),
 \end{equation*}
 
 где $a_k, b_k, c_k \in \R$.
