--- a/solutions/linear/16.tex
+++ b/solutions/linear/16.tex
@@ -318,7 +318,7 @@ $\Rg \varphi = \dim \Lc_2 \iff \dim \Ima \varphi = \dim \Lc_2 \overset{\Ima \var
 
 \Proof
 
-Действительно, коль скоро отображение биективно, по критерию выше $\dim \Ker \varphi = 0$, а также $\dim \Im \varphi = \dim \Lc_2$. А значит:
+Действительно, коль скоро отображение биективно, по критерию выше $\dim \Ker \varphi = 0$, а также $\dim \Ima \varphi = \dim \Lc_2$. А значит:
 \begin{equation*}
     \dim \Lc_1 = \dim \Ker \varphi + \dim \Ima \varphi = 0 + \dim \Lc_2 = \dim \Lc_2
 \end{equation*}
